--- a/2023-08-14 - primeraPractica/2023-08-14 - primeraPractica.cbp
+++ b/2023-08-14 - primeraPractica/2023-08-14 - primeraPractica.cbp
@@ -38,6 +38,10 @@
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="pilaAlumnos.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="pilaAlumnos.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
