--- a/2023-08-28 - Listas simples/2023-08-28 - Listas simples.cbp
+++ b/2023-08-28 - Listas simples/2023-08-28 - Listas simples.cbp
@@ -62,6 +62,10 @@
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="nodoArbol.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="nodoArbol.h" />
 		<Unit filename="registroArchivo.c">
 			<Option compilerVar="CC" />
 		</Unit>
